# JobTrackr-rust

./: LICENSE.md  README.md  package-lock.json  package.json  svelte.config.js  tsconfig.json
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/.sqlx/: query-0576bf21b10361563a2406b9fb6769e108a69e0c5c7c6695dcaa3f5d920c9847.json  query-06531f8e6bad85c1dc3bb1e5781fc9c690b3709d8a6126eefcdc7dc8ab8bbf27.json  query-06e2234373f800d8164d6e24f2e1b747361c36c4e0c98c4a996fb452f21ad317.json  query-09b29733a3183040e92a1f7ef13c24a24a3039ece4727d4dea5d607f372731bc.json  query-0b2526df7993b8a05e44016f185b1eb3c2f1429532df8cb4f2df9330e4d1c9f7.json  query-101fab33e1562a6b862a424752e4a13a4dbbf799ef563eaa4783e44e039f9b78.json  query-121dada1603bed7ec1e008f4552838e177acd608d7be4a7518da8abad1c1135f.json  query-1362249bfedadfef1f6e971d971a7908e202b7cc46a5b0ad58da7055c115d8ee.json  query-14013e84d27b25c2f5a4afc9173c14fd45c4cfa758d6168d3eae19dd0d86b695.json  query-170143c2c44003b757136e2f5d861323e6523cac6e56848762c1384c6a6b2f97.json  query-196a66a316a42a8e332c1ed4ae2f59af925a39997c44ad3d1bcca46726e36bb1.json  query-19e94affc9211baf2a313cb8890e38b46e5d6adffe1ff05a06a9d93d653f2abb.json  query-1a50cf36d20b2de0891aaabe2b94669ebe95afd868f1441b806df0449d00bd76.json  query-1ac4bdacc7222042b8eb3bf3951a80d9594d9afd90759246796180ffc0d9d843.json  query-1bfd04ecac95410048cb5f08b49076bc18e5c2c6790709aebd90dbab8b7d4390.json  query-1e146bb7915fe9ae47c41710607b015e0145e3fd8f9782b88e4eb5f0481ba8f9.json  query-1e9397d464b660116e8b59c9b3943edcb2923d0af1e8c198a4599ad43e7ae013.json  (+94 more)
src-tauri/src/: lib.rs  (+2 more)
(+172 files in other folders)
