[package]
name = "JobTrackr"
version = "0.2.2"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

[lib]
name = "jobtrackr_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
# --- Core ---
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"

# --- Async + Data ---
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
sqlx = { version = "0.7", features = ["runtime-tokio", "macros", "sqlite", "chrono"] }

# --- Serialization ---
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# --- Time + Paths ---
chrono = { version = "0.4.42", features = ["serde", "clock"] }
dirs = "5"

# --- Logging ---
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["fmt", "chrono", "env-filter"] }

# --- Optional (recommended for filtering levels via RUST_LOG) ---
once_cell = "1"
